--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@supabase/supabase-js": "^2.45.5",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
@@ -32,6 +35,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-share": "^5.1.0",
+    "stripe": "^17.2.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.3",
